fix: alignment minus and plus simbols

--- a/app/components/CoursesSection/styles.module.scss
+++ b/app/components/CoursesSection/styles.module.scss
@@ -166,6 +166,7 @@
       outline: none;
       box-shadow: none;
       padding: 0;
+      line-height: 1;
 
       .icon {
         position: relative;
@@ -174,6 +175,7 @@
         justify-content: center;
         width: 100%;
         height: 100%;
+        line-height: 1;
       }
 
       .plus,
@@ -181,8 +183,16 @@
         position: absolute;
         top: 50%;
         left: 50%;
+        height: 2.5rem !important;
+        width: 2.5rem;
+        margin: 0;
+        padding: 0;
+        line-height: 1;
         transform: translate(-50%, -50%);
         transition: opacity 0.3s ease, transform 0.3s ease;
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
 
       .plus {
@@ -212,8 +222,7 @@
       background: var(--primary);
       color: #000;
       border-color: var(--primary);
-      font-weight: 900;
-      font-size: 30px;
+      font-weight: 700;
 
       .plus {
         opacity: 0;
